html css 하다 말았음

--- a/movie.html
+++ b/movie.html
@@ -1,11 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>moviesearch</title>
+
+    <link rel="stylesheet" href="moviestyle.css">
+
 </head>
+
 <body>
-    
+    <div class="all">
+
+        <div class="leftbody">
+
+        </div>
+
+        <div class="rightbody">
+
+            <div class="cardrow">
+                <div class="card">
+                    <div class="imagesection">
+                        <img class="cardimage"
+                            src="https://pbs.twimg.com/media/FzsuVoqaIAAlrFd?format=jpg&name=4096x4096" alt="...">
+                    </div>
+                    <div class="textsection">
+                        <h5 class="cardtitle">Card title</h5>
+                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="imagesection">
+                        <img class="cardimage"
+                            src="https://pbs.twimg.com/media/FzsuVoqaIAAlrFd?format=jpg&name=4096x4096" alt="...">
+                    </div>
+                    <div class="textsection">
+                        <h5 class="cardtitle">Card title</h5>
+                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="imagesection">
+                        <img class="cardimage"
+                            src="https://pbs.twimg.com/media/FzsuVoqaIAAlrFd?format=jpg&name=4096x4096" alt="...">
+                    </div>
+                    <div class="textsection">
+                        <h5 class="cardtitle">Card title</h5>
+                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cardrow">
+                <div class="card">
+                    <div class="imagesection">
+                        <img class="cardimage"
+                            src="https://pbs.twimg.com/media/FzsuVoqaIAAlrFd?format=jpg&name=4096x4096" alt="...">
+                    </div>
+                    <div class="textsection">
+                        <h5 class="cardtitle">Card title</h5>
+                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="imagesection">
+                        <img class="cardimage"
+                            src="https://pbs.twimg.com/media/FzsuVoqaIAAlrFd?format=jpg&name=4096x4096" alt="...">
+                    </div>
+                    <div class="textsection">
+                        <h5 class="cardtitle">Card title</h5>
+                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="imagesection">
+                        <img class="cardimage"
+                            src="https://pbs.twimg.com/media/FzsuVoqaIAAlrFd?format=jpg&name=4096x4096" alt="...">
+                    </div>
+                    <div class="textsection">
+                        <h5 class="cardtitle">Card title</h5>
+                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cardrow">
+                <div class="card">
+                    <div class="imagesection">
+                        <img class="cardimage"
+                            src="https://pbs.twimg.com/media/FzsuVoqaIAAlrFd?format=jpg&name=4096x4096" alt="...">
+                    </div>
+                    <div class="textsection">
+                        <h5 class="cardtitle">Card title</h5>
+                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="imagesection">
+                        <img class="cardimage"
+                            src="https://pbs.twimg.com/media/FzsuVoqaIAAlrFd?format=jpg&name=4096x4096" alt="...">
+                    </div>
+                    <div class="textsection">
+                        <h5 class="cardtitle">Card title</h5>
+                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="imagesection">
+                        <img class="cardimage"
+                            src="https://pbs.twimg.com/media/FzsuVoqaIAAlrFd?format=jpg&name=4096x4096" alt="...">
+                    </div>
+                    <div class="textsection">
+                        <h5 class="cardtitle">Card title</h5>
+                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 </body>
+
 </html>
