위아래로배치바꿈

--- a/movie.html
+++ b/movie.html
@@ -13,7 +13,7 @@
 <body>
     <div class="all">
 
-        <div class="leftbody">
+        <div class="topbody">
             <div class="titlegroup">
                 <h1 class="title">영화검색</h1>
             </div>
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <div class="rightbody">
+        <div class="mainbody">
 
             <div class="cardrow">
                 <div class="card">
@@ -42,6 +42,18 @@
                     <div class="imagesection">
                         <img class="cardimage"
                             src="https://www.busan.com/nas/data/content/image/2018/02/08/20180208000063_0.jpg" alt="...">
+                    </div>
+                    <div class="textsection">
+                        <h5 class="cardtitle">Card title</h5>
+                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="imagesection">
+                        <img class="cardimage"
+                            src="https://upload.wikimedia.org/wikipedia/ko/7/74/%EC%97%85_%28%EC%98%81%ED%99%94%29_%ED%8F%AC%EC%8A%A4%ED%84%B0.jpg" alt="...">
                     </div>
                     <div class="textsection">
                         <h5 class="cardtitle">Card title</h5>
@@ -99,6 +111,17 @@
                             to additional content. This content is a little bit longer.</p>
                     </div>
                 </div>
+                <div class="card">
+                    <div class="imagesection">
+                        <img class="cardimage"
+                            src="https://upload.wikimedia.org/wikipedia/ko/b/bc/%EB%B0%B1%EB%91%90%EC%82%B0_%EC%98%81%ED%99%94_%ED%8F%AC%EC%8A%A4%ED%84%B0.jpg" alt="...">
+                    </div>
+                    <div class="textsection">
+                        <h5 class="cardtitle">Card title</h5>
+                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
             </div>
 
             <div class="cardrow">
@@ -118,6 +141,18 @@
                     <div class="imagesection">
                         <img class="cardimage"
                             src="https://thumb.mt.co.kr/06/2020/02/2020021018402016553_1.jpg" alt="...">
+                    </div>
+                    <div class="textsection">
+                        <h5 class="cardtitle">Card title</h5>
+                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="imagesection">
+                        <img class="cardimage"
+                            src="https://www.newsflix.co.kr/news/photo/202206/10524_9152_388.jpg" alt="...">
                     </div>
                     <div class="textsection">
                         <h5 class="cardtitle">Card title</h5>
@@ -156,6 +191,18 @@
                     <div class="imagesection">
                         <img class="cardimage"
                             src="https://www.newsflix.co.kr/news/photo/202206/10524_9152_388.jpg" alt="...">
+                    </div>
+                    <div class="textsection">
+                        <h5 class="cardtitle">Card title</h5>
+                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
+                            to additional content. This content is a little bit longer.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="imagesection">
+                        <img class="cardimage"
+                            src="https://thumb.mt.co.kr/06/2020/02/2020021018402016553_1.jpg" alt="...">
                     </div>
                     <div class="textsection">
                         <h5 class="cardtitle">Card title</h5>
