--- a/movie.html
+++ b/movie.html
@@ -7,6 +7,7 @@
     <title>moviesearch</title>
 
     <link rel="stylesheet" href="moviestyle.css">
+    <script src="moviecode.js"></script>
 
 </head>
 
@@ -15,216 +16,27 @@
 
         <div class="topbody">
             <div class="titlegroup">
-                <h1 class="title">영화검색</h1>
+                <h1 class="title">영화의 전당</h1>
             </div>
             <div class="inputgroup">
                 <input class="input" type="text" placeholder="입력">
-                <input  class="searchbtn" type="button" value="검색">
+                <input class="searchbtn" id="searchbtn" type="button" value="검색">
             </div>
         </div>
 
         <div class="mainbody">
 
-            <div class="cardrow">
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://img.vogue.co.kr/vogue/2020/03/style_5e7da0efac0a5.jpg" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
+            <div class="cardrow" id="cardrow0">
 
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://www.busan.com/nas/data/content/image/2018/02/08/20180208000063_0.jpg" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://upload.wikimedia.org/wikipedia/ko/7/74/%EC%97%85_%28%EC%98%81%ED%99%94%29_%ED%8F%AC%EC%8A%A4%ED%84%B0.jpg" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://upload.wikimedia.org/wikipedia/ko/7/74/%EC%97%85_%28%EC%98%81%ED%99%94%29_%ED%8F%AC%EC%8A%A4%ED%84%B0.jpg" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
             </div>
+            <div class="cardrow" id="cardrow1">
 
-            <div class="cardrow">
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://upload.wikimedia.org/wikipedia/ko/b/bc/%EB%B0%B1%EB%91%90%EC%82%B0_%EC%98%81%ED%99%94_%ED%8F%AC%EC%8A%A4%ED%84%B0.jpg" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://cdn.iconsumer.or.kr/news/photo/201701/14850944369080.png" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyeefxIcmX0HasINrCsfgEyZOhIOYcn70HoiZid2RySw&s" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://upload.wikimedia.org/wikipedia/ko/b/bc/%EB%B0%B1%EB%91%90%EC%82%B0_%EC%98%81%ED%99%94_%ED%8F%AC%EC%8A%A4%ED%84%B0.jpg" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
             </div>
+            <div class="cardrow" id="cardrow2">
 
-            <div class="cardrow">
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://thumb.mtstarnews.com/06/2023/08/2023080209420647066_1.jpg/dims/optimize" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://thumb.mt.co.kr/06/2020/02/2020021018402016553_1.jpg" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://www.newsflix.co.kr/news/photo/202206/10524_9152_388.jpg" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://web-cf-image.cjenm.com/crop/520x748/public/share/metamng/programs/contentsdetailposterthemoon01.jpg?v=1712070330" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
             </div>
-
-            <div class="cardrow">
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://image.ytn.co.kr/general/jpg/2021/0621/202106210910040497_d.jpg" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://www.newsflix.co.kr/news/photo/202206/10524_9152_388.jpg" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://thumb.mt.co.kr/06/2020/02/2020021018402016553_1.jpg" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="imagesection">
-                        <img class="cardimage"
-                            src="https://cdn.womennews.co.kr/news/photo/202012/204693_331746_647.jpg" alt="...">
-                    </div>
-                    <div class="textsection">
-                        <h5 class="cardtitle">Card title</h5>
-                        <p class="cardtext">This is a longer card with supporting text below as a natural lead-in
-                            to additional content. This content is a little bit longer.</p>
-                    </div>
-                </div>
-            </div>
-
         </div>
+
     </div>
 
 </body>
