--- a/movie.html
+++ b/movie.html
@@ -19,7 +19,7 @@
                 <h1 class="title">영화의 전당</h1>
             </div>
             <div class="inputgroup">
-                <input class="input" type="text" placeholder="입력">
+                <input class="input" id="input" type="text" placeholder="입력">
                 <input class="searchbtn" id="searchbtn" type="button" value="검색">
             </div>
         </div>
