카드버튼클릭?

--- a/movie.html
+++ b/movie.html
@@ -19,8 +19,9 @@
                 <h1 class="title">영화의 전당</h1>
             </div>
             <div class="inputgroup">
-                <input class="input" id="input" type="text" placeholder="입력">
+                <input class="input" id="input" type="text" placeholder="입력" autofocus>
                 <input class="searchbtn" id="searchbtn" type="button" value="검색">
+                <input class="resetbtn" id="resetbtn" type="button" value="돌아가기">
             </div>
         </div>
 
