검색과 카드클릭

--- a/movie.html
+++ b/movie.html
@@ -7,7 +7,6 @@
     <title>moviesearch</title>
 
     <link rel="stylesheet" href="moviestyle.css">
-    <script src="moviecode.js"></script>
 
 </head>
 
@@ -39,6 +38,8 @@
         </div>
 
     </div>
+
+    <script defer src="moviecode.js"></script>
 
 </body>
 
