피드백받고수정

--- a/movie.html
+++ b/movie.html
@@ -7,7 +7,7 @@
     <title>moviesearch</title>
 
     <link rel="stylesheet" href="moviestyle.css">
-    <script defer src="moviecode.js"></script>
+    <script type="module" src="moviecode.js"></script>
 </head>
 
 <body>
