--- a/movie.html
+++ b/movie.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>moviesearch</title>
 
-    <link rel="stylesheet" href="moviestyle.css">
-    <script type="module" src="moviecode.js"></script>
+    <link rel="stylesheet" href="movieStyle.css">
+    <script type="module" src="movieCode.js"></script>
 </head>
 
 <body>
